--- a/webcam.html
+++ b/webcam.html
@@ -14,12 +14,28 @@
 
     <!-- (B) CONTROLS -->
     <div id="cam-controls">
+      <!-- Controles principais -->
       <input type="button" id="cam-take" class="material-icons"
              value="photo_camera" onclick="webcam.take()" disabled>
       <input type="button" id="cam-save" class="material-icons"
              value="download" onclick="webcam.save()" disabled>
       <input type="button" id="cam-toggle" class="material-icons"
-             value="switch_camera" onclick="webcam.toggleCamera()" disabled> <!-- Alterado para cam-toggle -->
+             value="switch_camera" onclick="webcam.toggleCamera()" disabled>
+      
+      <!-- Controles de zoom -->
+      <div class="zoom-controls">
+        <button id="zoom-out" class="material-icons">zoom_out</button>
+        <span id="zoom-level">100%</span>
+        <button id="zoom-in" class="material-icons">zoom_in</button>
+      </div>
+      
+      <!-- Controles de filtro -->
+      <div class="filter-controls">
+        <button class="filter-btn material-icons" data-filter="none" title="Normal">tonality</button>
+        <button class="filter-btn material-icons" data-filter="grayscale" title="Preto e Branco">invert_colors_off</button>
+        <button class="filter-btn material-icons" data-filter="sepia" title="Sépia">filter_b_and_w</button>
+        <button class="filter-btn material-icons" data-filter="invert" title="Negativo">invert_colors</button>
+      </div>
     </div>
 
     <!-- (C) CAPTURAS -->
