--- a/webcam.html
+++ b/webcam.html
@@ -30,12 +30,12 @@
         <div class="zoom-hint">Use roda do mouse no desktop</div>
       </div>
       
-      <!-- Controles de filtro -->
+      <!-- Controles de filtro - Versão Mobile Otimizada -->
       <div class="filter-controls">
-        <button class="filter-btn material-icons" data-filter="none" title="Normal">tonality</button>
-        <button class="filter-btn material-icons" data-filter="grayscale" title="Preto e Branco">invert_colors_off</button>
-        <button class="filter-btn material-icons" data-filter="sepia" title="Sépia">filter_b_and_w</button>
-        <button class="filter-btn material-icons" data-filter="invert" title="Negativo">invert_colors</button>
+        <button class="filter-btn material-icons" data-filter="none" title="Normal" aria-label="Filtro Normal">tonality</button>
+        <button class="filter-btn material-icons" data-filter="grayscale" title="Preto e Branco" aria-label="Filtro Preto e Branco">invert_colors_off</button>
+        <button class="filter-btn material-icons" data-filter="sepia" title="Sépia" aria-label="Filtro Sépia">filter_b_and_w</button>
+        <button class="filter-btn material-icons" data-filter="invert" title="Negativo" aria-label="Filtro Negativo">invert_colors</button>
       </div>
     </div>
 
